vlib/v/checker/tests/if_guard_expr_err.vv
fn foo() ! {
	return error("error")
}

fn main() {
	a := if r := foo() {
		true
	} else {
		false
	}
	
	println(a)
}
